[package]
name = "bitcoin-headers"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
reqwest = { version = "0.12.9" }
bitcoin = "0.32.5"
hex-conservative = "0.3.0"
axum = "0.7.9"
serde = { version = "1.0.216", features = ["derive"] }
futures = "0.3.31"
backon = "1.3.0"
anyhow = "1.0.94"
